--- a/package.json
+++ b/package.json
@@ -52,7 +52,10 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^1.1.0"
+    "gh-pages": "^1.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.24.1"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -90,7 +93,10 @@
   },
   "babel": {
     "presets": [
-      "react-app"
+      "react-app",
+      "es2015",
+      "stage-0",
+      "react-hmre"
     ]
   },
   "eslintConfig": {
