--- a/package.json
+++ b/package.json
@@ -52,10 +52,12 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^1.1.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.24.1"
+    "babel-preset-stage-0": "^6.24.1",
+    "gh-pages": "^1.1.0",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.7"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -95,8 +97,7 @@
     "presets": [
       "react-app",
       "es2015",
-      "stage-0",
-      "react-hmre"
+      "stage-0"
     ]
   },
   "eslintConfig": {
