--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "gh-pages": "^1.1.0",
     "node-sass": "^4.7.2",
+    "react-css-modules": "^4.7.1",
     "sass-loader": "^6.0.7"
   },
   "jest": {
